--- a/tic-tac-toe/styles.css
+++ b/tic-tac-toe/styles.css
@@ -1,9 +1,74 @@
+html{
+
+  box-sizing: border-box;
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 24px;
+  background-image: url('http://www.nasa.gov/sites/default/files/thumbnails/image/eso1007a.jpg');
+  background-repeat: no-repeat;
+  /*background-color: #222222;*/
+  color: #92018c;
+
+}
+
+*,
+*:before,
+*:after{
+  box-sizing: inherit;
+}
+
+h1 {
+  margin: 0;
+  padding-bottom: 10px;
+}
+
+h3,
+p{
+  margin: 0;
+}
+
 td {
-  font-family: Baskerville, serif;
-  font-size: 150px;
-  border: 3px solid black;
-  width: 300px;
-  height: 300px;
+  font-family: helvetica, serif;
+  font-size: 100px;
+  border: 3px solid #e8e8e8;
+  width: 150px;
+  height: 150px;
   text-align: center;
   cursor: pointer;
+}
+td:hover{
+  background-color: #e8e8e8 ;
+}
+
+body{
+  width: 80%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+table{
+  margin:0 auto;
+}
+
+button {
+  display: inline-block;
+  padding: 5px 15px;
+  font-size: 12px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: #4CAF50;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 3px #999;
+  margin-bottom: 10px;
+}
+
+button:hover {background-color: #3e8e41}
+
+button:active {
+  background-color: #3e8e41;
+  box-shadow: 0 3px #666;
+  transform: translateY(2px);
 }
